// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`converts a dynamically imported aml file 1`] = `
{
  "events": [
    {
      "type": "header",
      "value": "My Birthday",
    },
    {
      "type": "date",
      "value": "August 20th, 1990",
    },
    {
      "type": "text",
      "value": "Here's a nice photo",
    },
    {
      "type": "image",
      "value": {
        "alt": "Family Photo",
        "members": [
          "Dad",
          "Mom",
          "Me",
        ],
        "src": "http://example.com/photo.png",
      },
    },
  ],
}
`;

exports[`converts an aml file 1`] = `
{
  "events": Array [
    {
      "type": "header",
      "value": "My Birthday",
    },
    {
      "type": "date",
      "value": "August 20th, 1990",
    },
    {
      "type": "text",
      "value": "Here's a nice photo",
    },
    {
      "type": "image",
      "value": {
        "alt": "Family Photo",
        "members": [
          "Dad",
          "Mom",
          "Me",
        ],
        "src": "http://example.com/photo.png",
      },
    },
  ],
}
`;
